--- a/cadastro.html
+++ b/cadastro.html
@@ -7,14 +7,24 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
 <body>
     <div class="container">
-        <h1>Cadastro</h1>
+        <h1 style="text-align: center;">Cadastro</h1>
         <label for="">Nome</label>
-        <input type="text" name="" id="nomeUser">
-        <button type="button">Salvar
+        <input type="text" class="form-control" name="" id="nomeUser">
+        <button style="margin-top:20px;" type="button" class="btn btn-dark" onclick="salvarUser()" >Salvar
         </button>
+    </div>
+
+    <div  style="margin-top: 20px;" class="container">
+        <table class="table table-striped" id="tabela">
+            <tr>
+                <th>Nome</th>
+                <th>Ações</th>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
